<resources>
    <string name="app_name">UI_Ex_A1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="simsleev">SIMSLEEV</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">GO!</string>
    <string name="having_issues">Having Issues?</string>
    <string name="are_you_a_newbie">Are you a newbie?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_am_already_a_member">I am already a member</string>
    <string name="sign_in">SIGN IN</string>
</resources>